--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,12 @@
 body {
-    background-color: blue;
+    background-color: lightgoldenrodyellow;
 }
+
+h2 {
+    color: tan;
+}
+
+#shadowsharp {
+    border: 1px solid black ;
+    box-shadow: 10px 10px 4px #808080 ;;
+  }
